# SerialFlow

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SerialFlow.pro
.github/workflows/: deploy.yml
forms/: mainwindow.ui  settingsdialog.ui
resources/: resources.qrc  style.qss
src/: main.cpp  mainwindow.cpp  mainwindow.h  serialportmanager.cpp  serialportmanager.h  settingsdialog.cpp  settingsdialog.h
tests/: tests.pro  tst_serialportmanager.cpp
tests/ci_repro/: Dockerfile.arch  Dockerfile.ubuntu  Dockerfile.windows  docker-compose.yml
